--- a/src/components/category-widget/category-widget.css
+++ b/src/components/category-widget/category-widget.css
@@ -19,6 +19,7 @@
 
 .category {
   margin-bottom: 10px;
+  cursor: pointer;
 }
 
 .category label {
@@ -29,13 +30,27 @@
 
 .category-bar {
   width: 100%;
-  height: 10px;
+  height: 4px;
   background-color: #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* .category-bar:hover {
+  background-color: #fafafa;
+} */
+
+.category-progress {
+  width: 0%;
+  height: 4px;
+  background-color: #3ab5f0;
   border-radius: 5px;
 }
 
-.category-progress {
-  height: 10px;
-  background-color: teal;
-  border-radius: 5px;
+.category-progress:hover {
+  background-color: blue;
+}
+
+.category-progress--selected {
+  background-color: blue;
 }
