--- a/src/components/category-widget/category-widget.css
+++ b/src/components/category-widget/category-widget.css
@@ -8,6 +8,11 @@
   cursor: pointer;
 }
 
+.category.disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
 .category label {
   display: flex;
   justify-content: space-between;
